src/qt/res/css/default.css
/* ... */
QStackedWidget#SendCoinsEntry .QFrame#SendCoins .QLabel#amountLabel {
	/* background-color:#6a6a6a; */
}
QStackedWidget#SendCoinsEntry .QValidatedLineEdit#payTo {
	/* Pay To Input Field */
}
QStackedWidget#SendCoinsEntry .QToolButton {
	/* General Settings for Pay To Icons */
	background-color: transparent;
	padding-left: 5px;
	padding-right: 5px;
	border: 0;
	outline: 0;
}
QStackedWidget#SendCoinsEntry .QToolButton#addressBookButton {
	/* Address Book Button */
	padding-left: 10px;
}
QStackedWidget#SendCoinsEntry .QToolButton#addressBookButton {} QStackedWidget#SendCoinsEntry .QToolButton#pasteButton {} QStackedWidget#SendCoinsEntry .QToolButton#deleteButton {} QStackedWidget#SendCoinsEntry .QLineEdit#addAsLabel {
	/* Pay To Input Field */
}

QDialog#SendCoinsDialog QLabel#lblBalanceText {
    font-size:16px;
    font-weight:bold;
	min-height: 27px;
    color: #DCDCDC;
    text-transform: uppercase;
}
QDialog#SendCoinsDialog QLabel#lblBalance {
	color: #DCDCDC;
    font-size:16px;
    font-weight:bold;
	min-height: 27px;
}

/**************************** COIN CONTROL POPUP ****************************************/

QDialog#CoinControlDialog .QLabel#labelCoinControlQuantityText {
	/* Coin Control Quantity Label */
	min-height: 30px;
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlQuantity {
	/* Coin Control Quantity */
	min-height: 30px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlBytesText {
	/* Coin Control Bytes Label */
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlBytes {
	/* Coin Control Bytes */
}
QDialog#CoinControlDialog .QLabel#labelCoinControlAmountText {
	/* Coin Control Amount Label */
	min-height: 30px;
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlAmount {
	/* Coin Control Amount */
	min-height: 30px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlPriorityText {
	/* Coin Control Priority Label */
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlPriority {
	/* Coin Control Priority */
}
QDialog#CoinControlDialog .QLabel#labelCoinControlFeeText {
	/* Coin Control Fee Label */
	min-height: 30px;
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlFee {
	/* Coin Control Fee */
	min-height: 30px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlLowOutputText {
	/* Coin Control Low Output Label */
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlLowOutput {
	/* Coin Control Low Output */
}
QDialog#CoinControlDialog .QLabel#labelCoinControlAfterFeeText {
	/* Coin Control After Fee Label */
	min-height: 30px;
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlAfterFee {
	/* Coin Control After Fee */
	min-height: 30px;
}

QDialog#CoinControlDialog .QLabel#labelCoinControlChangeText {
	/* Coin Control Change Label */
	padding-left: 15px;
}
QDialog#CoinControlDialog .QLabel#labelCoinControlChange {
	/* Coin Control Change */
}

QDialog#CoinControlDialog .QFrame#frame .QPushButton#pushButtonSelectAll {
	/* (un)select all button */
    padding-left:10px;
    padding-right:10px;
}
QDialog#CoinControlDialog .QFrame#frame .QPushButton#pushButtonToggleLock {
	/* Toggle lock state button */
	/* padding-left:10px;
padding-right:10px;*/
}
QDialog#CoinControlDialog .QDialogButtonBox#buttonBox QPushButton {
	/* Coin Control 'OK' button */
}
QDialog#CoinControlDialog .QFrame#frame .QRadioButton#radioTreeMode {
	/* Coin Control Tree Mode Selector */
	color: #818181;
	background-color: transparent;
}
QDialog#CoinControlDialog .QFrame#frame .QRadioButton#radioListMode {
	/* Coin Control List Mode Selector */
	color: #818181;
	background-color: transparent;
}
QDialog#CoinControlDialog QHeaderView::section:first {
	/* Bug Fix: the number "1" displays in this table for some reason... */
	color: transparent;
}


QTableWidget,
QTableWidget:focus,
.QTableView,
.QTableView:focus,
QTreeWidget,
QTreeWidget:focus,
QTreeView,
QTreeView:focus {
	/* Remove focus outline */
	outline: 0;
	background: transparent;
}


QTreeWidget {
	/* Coin Control Widget Container */
	outline: 0;
	background-color: transparent;
    border: 1px solid rgba(255, 255, 255, 0.05);
	alternate-background-color: transparent;
    /* margin-top: 20px; */
}
QTreeWidget::item {
	background-color:transparent;
	color:#DCDCDC;
    border:none;
	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

QTreeWidget::item:selected {
	/* Coin Control Item (selected) */
    background-color: #707780;
    color: #232323;
}
QTreeWidget::item:checked {
	/* Coin Control Item (checked) */
    background-color: #707780;
    color: #232323;
}
QTreeWidget::branch:selected {
	/* Coin Control Branch Icon */
	background:none;
	color: #FEC60D;
}
QTreeWidget::branch:checked {
	/* Coin Control Branch Icon */
	background-color: #707780;
	color: #FEC60D;
}
QTreeWidget::seperator {} QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::indicator {
	/* Coin Control Widget Checkbox */
}

/**************************** RECEIVE COINS *********************************************/

QWidget#ReceiveCoinsDialog {
	background-color: transparent;
}
QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#lblLabel {
	/* Label Label */
	background-color: transparent;
	min-width: 102px;
	color: #DCDCDC;
	font-weight: 500;
	font-size: 16px;
	padding-right: 5px;
}
QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#lblAmount {
	/* Amount Label */
	background-color: transparent;
	min-width: 102px;
	color: #DCDCDC;
	font-weight: 500;
	font-size: 16px;
	padding-right: 5px;
}
QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#lblMessage {
	/* Message Label */
	background-color: transparent;
	min-width: 102px;
	color: #DCDCDC;
	font-weight: 500;
	font-size: 16px;
	padding-right: 5px;
}
QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton#clearButton {
	/* Clear Button */
	background-color: transparent;
	border: 2px solid #707780;
	color: #707780;
}
/* ... */

